fix(icon-button): Fix invisible buttons caused by c425fc14c5d9ef93a5192c152ae85b3cc7355f5f

--- a/src/components/generic/icon-button.css
+++ b/src/components/generic/icon-button.css
@@ -18,6 +18,15 @@
   width: 4rem;
 }
 
+.icon-button svg {
+  fill: none;
+  height: 1.5rem;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 2px;
+  width: 1.5rem;
+}
+
 .icon-button--slide-in {
   animation-direction: reverse;
   animation-duration: var(--timing-base);
